--- a/styles/reflectivejournal.css
+++ b/styles/reflectivejournal.css
@@ -1397,6 +1397,14 @@ section.sectionOne.active .diagramContainer img {
           transform: translateY(0rem);
 }
 
+section.sectionTwo.active {
+  opacity: 100%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(0rem);
+          transform: translateY(0rem);
+}
+
 section.sectionTwo.active .container {
   opacity: 100%;
   -webkit-transition: 0.5s all;
@@ -2224,7 +2232,7 @@ section.sectionTwo.active .diagramContainer img {
     font-weight: 400;
   }
   section.sectionOne .diagramContainer {
-    padding: 0 0 5rem 0;
+    padding: 0 0 30rem 0;
   }
   section.sectionTwo {
     height: 100%;
@@ -2246,6 +2254,11 @@ section.sectionTwo.active .diagramContainer img {
     row-gap: 4rem;
     margin: 3rem 0 10rem 0;
     padding: 0;
+    opacity: 0%;
+    -webkit-transition: 0.5s all;
+    transition: 0.5s all;
+    -webkit-transform: translateY(-3rem);
+            transform: translateY(-3rem);
   }
   section.sectionTwo .diagramContainer .containerOne button.technology {
     visibility: hidden;
@@ -2282,6 +2295,13 @@ section.sectionTwo.active .diagramContainer img {
     height: -moz-fit-content;
     height: fit-content;
     max-height: inherit;
+  }
+  section.sectionTwo.active .diagramContainer {
+    opacity: 100%;
+    -webkit-transition: 0.5s all;
+    transition: 0.5s all;
+    -webkit-transform: translateY(0rem);
+            transform: translateY(0rem);
   }
   footer {
     height: calc(100%);
