--- a/styles/reflectivejournal.css
+++ b/styles/reflectivejournal.css
@@ -706,6 +706,60 @@ main .background svg {
           transform: translateY(-3rem);
 }
 
+.sectionOne_02 {
+  height: 100vh;
+  padding: 0 13vw;
+  height: 130vh;
+}
+
+.sectionOne_02 .titleContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 0 2rem 0;
+}
+
+.sectionOne_02 .titleContainer .title {
+  opacity: 0%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(-3rem);
+          transform: translateY(-3rem);
+  padding: 0 0 0 0;
+}
+
+.sectionOne_02 .titleContainer .title h1 {
+  font-size: clamp(2rem, 7vw, 4.5rem);
+  font-family: poppins;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+}
+
+.sectionOne_02 .diagramContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 70%;
+  padding: 0;
+}
+
+.sectionOne_02 .diagramContainer img {
+  height: auto;
+  width: 73vw;
+  opacity: 0%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(-3rem);
+          transform: translateY(-3rem);
+}
+
 .sectionTwo {
   height: 100vh;
   padding: 0 13vw;
@@ -1398,6 +1452,30 @@ section.sectionOne.active .diagramContainer img {
           transform: translateY(0rem);
 }
 
+section.sectionOne_02.active .container {
+  opacity: 100%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(0rem);
+          transform: translateY(0rem);
+}
+
+section.sectionOne_02.active .titleContainer .title {
+  opacity: 100%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(0rem);
+          transform: translateY(0rem);
+}
+
+section.sectionOne_02.active .diagramContainer img {
+  opacity: 100%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(0rem);
+          transform: translateY(0rem);
+}
+
 section.sectionTwo.active {
   opacity: 100%;
   -webkit-transition: 0.5s all;
@@ -1893,6 +1971,11 @@ section.sectionTwo.active .diagramContainer img {
     padding: 0 10vw;
     height: 100vh;
   }
+  section.sectionOne_02 {
+    height: 100%;
+    padding: 0 10vw;
+    height: 100vh;
+  }
   section.sectionTwo {
     height: 100%;
     padding: 0 10vw;
@@ -2233,6 +2316,44 @@ section.sectionTwo.active .diagramContainer img {
     font-weight: 400;
   }
   section.sectionOne .diagramContainer {
+    padding: 0 0 10rem 0;
+  }
+  section.sectionOne_02 {
+    height: 100%;
+    padding: 0 7vw;
+    height: 100%;
+  }
+  section.sectionOne_02 .titleContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 0 3rem 0;
+  }
+  section.sectionOne_02 .titleContainer .title {
+    opacity: 0%;
+    -webkit-transition: 0.5s all;
+    transition: 0.5s all;
+    -webkit-transform: translateY(-3rem);
+            transform: translateY(-3rem);
+    padding: 0 0 3rem 0;
+  }
+  section.sectionOne_02 .titleContainer .title p {
+    font-size: clamp(1.19rem, 0.9vw, 2rem);
+    font-family: poppins;
+    line-height: clamp(3rem, 2vw, 4rem);
+    font-weight: 400;
+  }
+  section.sectionOne_02 .diagramContainer {
     padding: 0 0 10rem 0;
   }
   section.sectionTwo {
