--- a/styles/reflectivejournal.css
+++ b/styles/reflectivejournal.css
@@ -1116,6 +1116,213 @@ main .background svg {
   transition: 1s all;
 }
 
+.sectionThree {
+  height: 100vh;
+  padding: 0 13vw;
+  height: 125vh;
+}
+
+.sectionThree .titleContainer {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: 75% 25%;
+      grid-template-columns: 75% 25%;
+  -ms-grid-rows: 100%;
+      grid-template-rows: 100%;
+  padding: 0 0 3rem 0;
+}
+
+.sectionThree .titleContainer .title {
+  opacity: 0%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(-3rem);
+          transform: translateY(-3rem);
+  padding: 0 5rem 0 0;
+  position: relative;
+}
+
+.sectionThree .titleContainer .title h1 {
+  font-size: clamp(2rem, 7vw, 4.5rem);
+  font-family: poppins;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+}
+
+.sectionThree .titleContainer .title p {
+  font-size: clamp(1.19rem, 0.9vw, 2rem);
+  font-family: poppins;
+  line-height: clamp(3rem, 2vw, 4rem);
+  font-weight: 400;
+}
+
+.sectionThree .titleContainer .title .buttonContainer {
+  position: absolute;
+  bottom: -7rem;
+}
+
+.sectionThree .titleContainer .title .buttonContainer button {
+  background-color: transparent;
+  padding: 1.25rem clamp(6rem, 1.5vw, 10rem);
+  border-radius: 5rem;
+  font-family: poppins;
+  font-weight: 600;
+  font-size: clamp(1.5rem, 1.25vw, 2.7rem);
+  color: #1C56A3;
+  border: 1px solid #1C56A3;
+  -webkit-transition: 0.25s all;
+  transition: 0.25s all;
+  text-transform: capitalize;
+}
+
+.sectionThree .titleContainer .title .buttonContainer button:hover {
+  background: linear-gradient(27deg, #10376c 0%, #1c56a3 100%);
+  padding: 1.25rem clamp(6rem, 1.5vw, 10rem);
+  border-radius: 5rem;
+  font-family: poppins;
+  font-weight: 600;
+  font-size: clamp(1.5rem, 1.25vw, 2.7rem);
+  color: #FFFFFF;
+  border: 1px solid transparent;
+  -webkit-transition: 0.25s all;
+  transition: 0.25s all;
+  cursor: pointer;
+}
+
+.sectionThree .titleContainer .profile {
+  opacity: 0%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(5rem);
+          transform: translateY(5rem);
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sectionThree .titleContainer .profile img {
+  height: auto;
+  width: 100%;
+}
+
+.sectionThree .titleContainer .buttonContainerMobile {
+  visibility: hidden;
+}
+
+.sectionThree .titleContainerTwo {
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-columns: 60% 40%;
+      grid-template-columns: 60% 40%;
+  -ms-grid-rows: 100%;
+      grid-template-rows: 100%;
+}
+
+.sectionThree .titleContainerTwo .title {
+  opacity: 0%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(-3rem);
+          transform: translateY(-3rem);
+  padding: 0 5rem 0 0;
+  position: relative;
+}
+
+.sectionThree .titleContainerTwo .title h1 {
+  font-size: clamp(2rem, 7vw, 4.5rem);
+  font-family: poppins;
+  text-transform: uppercase;
+  margin: 0;
+  padding: 0;
+}
+
+.sectionThree .titleContainerTwo .title p {
+  font-size: clamp(1.19rem, 0.9vw, 2rem);
+  font-family: poppins;
+  line-height: clamp(3rem, 2vw, 4rem);
+  font-weight: 400;
+}
+
+.sectionThree .titleContainerTwo .title .buttonContainer {
+  position: absolute;
+  bottom: -7rem;
+}
+
+.sectionThree .titleContainerTwo .title .buttonContainer button {
+  background-color: transparent;
+  padding: 1.25rem clamp(6rem, 1.5vw, 10rem);
+  border-radius: 5rem;
+  font-family: poppins;
+  font-weight: 600;
+  font-size: clamp(1.5rem, 1.25vw, 2.7rem);
+  color: #1C56A3;
+  border: 1px solid #1C56A3;
+  -webkit-transition: 0.25s all;
+  transition: 0.25s all;
+  text-transform: capitalize;
+}
+
+.sectionThree .titleContainerTwo .title .buttonContainer button:hover {
+  background: linear-gradient(27deg, #10376c 0%, #1c56a3 100%);
+  padding: 1.25rem clamp(6rem, 1.5vw, 10rem);
+  border-radius: 5rem;
+  font-family: poppins;
+  font-weight: 600;
+  font-size: clamp(1.5rem, 1.25vw, 2.7rem);
+  color: #FFFFFF;
+  border: 1px solid transparent;
+  -webkit-transition: 0.25s all;
+  transition: 0.25s all;
+  cursor: pointer;
+}
+
+.sectionThree .titleContainerTwo .profile {
+  opacity: 0%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(5rem);
+          transform: translateY(5rem);
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sectionThree .titleContainerTwo .profile img {
+  height: auto;
+  width: 100%;
+}
+
+.sectionThree .titleContainerTwo .buttonContainerMobile {
+  visibility: hidden;
+}
+
 footer {
   height: 40rem;
   background-color: #101011;
@@ -1506,6 +1713,34 @@ section.sectionTwo.active .diagramContainer img {
   transition: 0.5s all;
   -webkit-transform: translateY(0rem);
           transform: translateY(0rem);
+}
+
+section.sectionThree.active .container {
+  opacity: 100%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(0rem);
+          transform: translateY(0rem);
+}
+
+section.sectionThree.active .titleContainer .title {
+  opacity: 100%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(0rem);
+          transform: translateY(0rem);
+}
+
+section.sectionThree.active .titleContainerTwo .title {
+  opacity: 100%;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
+  -webkit-transform: translateY(0rem);
+          transform: translateY(0rem);
+}
+
+section.sectionThree.active .profile {
+  opacity: 100%;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -2033,6 +2268,10 @@ section.sectionTwo.active .diagramContainer img {
     height: fit-content;
     max-height: inherit;
   }
+  section.sectionThree {
+    height: 100%;
+    padding: 0 10vw;
+  }
   footer {
     height: calc(100%);
     background-color: #101011;
@@ -2424,6 +2663,187 @@ section.sectionTwo.active .diagramContainer img {
     transition: 0.5s all;
     -webkit-transform: translateY(0rem);
             transform: translateY(0rem);
+  }
+  section.sectionThree {
+    height: 100%;
+    padding: 0 7vw;
+    height: 100%;
+  }
+  section.sectionThree .titleContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 0 5rem 0;
+  }
+  section.sectionThree .titleContainer .title {
+    opacity: 0%;
+    -webkit-transition: 0.5s all;
+    transition: 0.5s all;
+    -webkit-transform: translateY(-3rem);
+            transform: translateY(-3rem);
+    padding: 0 0 3rem 0;
+  }
+  section.sectionThree .titleContainer .title h1 {
+    text-transform: uppercase;
+    font-size: clamp(3.75rem, 3.75vw, 6.5rem);
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+  }
+  section.sectionThree .titleContainer .title p {
+    font-size: clamp(1.19rem, 0.9vw, 2rem);
+    font-family: poppins;
+    line-height: clamp(3rem, 2vw, 4rem);
+    font-weight: 400;
+  }
+  section.sectionThree .titleContainer .title .buttonContainer {
+    visibility: hidden;
+  }
+  section.sectionThree .titleContainer .profile {
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 0 0 3rem 0;
+  }
+  section.sectionThree .titleContainer .profile img {
+    height: auto;
+    width: 100%;
+  }
+  section.sectionThree .titleContainer .buttonContainerMobile {
+    visibility: visible;
+    width: 100%;
+  }
+  section.sectionThree .titleContainer .buttonContainerMobile button {
+    background-color: transparent;
+    padding: 1.25rem clamp(6rem, 1.5vw, 10rem);
+    border-radius: 5rem;
+    font-family: poppins;
+    font-weight: 600;
+    font-size: clamp(1.5rem, 1.25vw, 2.7rem);
+    color: #1C56A3;
+    border: 1px solid #1C56A3;
+    -webkit-transition: 0.25s all;
+    transition: 0.25s all;
+    text-transform: capitalize;
+    width: 100%;
+  }
+  section.sectionThree .titleContainer .buttonContainerMobile button:hover {
+    background: linear-gradient(27deg, #10376c 0%, #1c56a3 100%);
+    padding: 1.25rem clamp(6rem, 1.5vw, 10rem);
+    border-radius: 5rem;
+    font-family: poppins;
+    font-weight: 600;
+    font-size: clamp(1.5rem, 1.25vw, 2.7rem);
+    color: #FFFFFF;
+    border: 1px solid transparent;
+    -webkit-transition: 0.25s all;
+    transition: 0.25s all;
+    cursor: pointer;
+  }
+  section.sectionThree .titleContainerTwo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0 0 5rem 0;
+  }
+  section.sectionThree .titleContainerTwo .title {
+    opacity: 0%;
+    -webkit-transition: 0.5s all;
+    transition: 0.5s all;
+    -webkit-transform: translateY(-3rem);
+            transform: translateY(-3rem);
+    padding: 0 0 3rem 0;
+  }
+  section.sectionThree .titleContainerTwo .title h1 {
+    text-transform: uppercase;
+    font-size: clamp(3.75rem, 3.75vw, 6.5rem);
+    font-weight: 700;
+    margin: 0;
+    padding: 0;
+  }
+  section.sectionThree .titleContainerTwo .title p {
+    font-size: clamp(1.19rem, 0.9vw, 2rem);
+    font-family: poppins;
+    line-height: clamp(3rem, 2vw, 4rem);
+    font-weight: 400;
+  }
+  section.sectionThree .titleContainerTwo .title .buttonContainer {
+    visibility: hidden;
+  }
+  section.sectionThree .titleContainerTwo .profile {
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 0 0 3rem 0;
+  }
+  section.sectionThree .titleContainerTwo .profile img {
+    height: auto;
+    width: 100%;
+  }
+  section.sectionThree .titleContainerTwo .buttonContainerMobile {
+    visibility: visible;
+    width: 100%;
+  }
+  section.sectionThree .titleContainerTwo .buttonContainerMobile button {
+    background-color: transparent;
+    padding: 1.25rem clamp(6rem, 1.5vw, 10rem);
+    border-radius: 5rem;
+    font-family: poppins;
+    font-weight: 600;
+    font-size: clamp(1.5rem, 1.25vw, 2.7rem);
+    color: #1C56A3;
+    border: 1px solid #1C56A3;
+    -webkit-transition: 0.25s all;
+    transition: 0.25s all;
+    text-transform: capitalize;
+    width: 100%;
+  }
+  section.sectionThree .titleContainerTwo .buttonContainerMobile button:hover {
+    background: linear-gradient(27deg, #10376c 0%, #1c56a3 100%);
+    padding: 1.25rem clamp(6rem, 1.5vw, 10rem);
+    border-radius: 5rem;
+    font-family: poppins;
+    font-weight: 600;
+    font-size: clamp(1.5rem, 1.25vw, 2.7rem);
+    color: #FFFFFF;
+    border: 1px solid transparent;
+    -webkit-transition: 0.25s all;
+    transition: 0.25s all;
+    cursor: pointer;
   }
   footer {
     height: calc(100%);
