--- a/styles/reflectivejournal.scss
+++ b/styles/reflectivejournal.scss
@@ -386,6 +386,11 @@ main {
                 padding:0;
             }
 
+            
+            h2 {
+                color: $blue;
+            }
+
             p {
                 @include paragraph;
             }
@@ -851,11 +856,10 @@ section.sectionThree.active {
     
             .title {
                 @include lineAnimationTitleBefore;
-                padding: 0 0 3rem 0;
+                padding: 0;
     
                 
                 h1 {
-                    @include subHeading;
                     margin: 0;
                     padding:0;
                 }
@@ -907,11 +911,10 @@ section.sectionThree.active {
     
             .title {
                 @include lineAnimationTitleBefore;
-                padding: 0 0 3rem 0;
+                padding: 0;
     
                 
                 h1 {
-                    @include subHeading;
                     margin: 0;
                     padding:0;
                 }
@@ -930,7 +933,7 @@ section.sectionThree.active {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                padding: 0 0 3rem 0;
+                padding: 0 0 5rem 0;
     
                 img {
                     height: auto;
