--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -110,7 +110,7 @@ section.sectionOne {
 
         .enquiryContainer {
 
-            textarea {
+            input {
                 @include contactContainerLarge;
             }
 
